# Practicas-robotica

./: CMakeLists.txt  README.md  package.xml
Practica1-stop-bumper/: CMakeLists.txt  notas.txt  package.xml
Practica2-bumpgo/: CMakeLists.txt  notas.txt  package.xml
Practica2-bumpgo/src/: nodo_bumpgo.cpp
Practica3-YOLO/: CMakeLists.txt  notas.txt  package.xml
Practica3-YOLO/launch/: yolo.launch
Practica3-YOLO/src/: nodo_yolo.cpp
Practica4-Mapeado/: costmap_common_params.yaml  dwa_local_planner_params.yaml  mapaUniSafe.xcf  mapaUniSafe.yaml  notas.txt
Practica5-camara/: CMakeLists.txt  notas.txt  package.xml
Practica5-camara/launch/: gototf.launch
Practica5-camara/src/: gototf.cpp
Practica6-botella/: CMakeLists.txt  notas.txt  package.xml
Practica6-botella/launch/: botella.launch
Practica6-botella/src/: busquedap6.cpp  mainp6.cpp  navp6.cpp
Practica7-behavior/: CMakeLists.txt  bumpgo_tree.xml  package.xml
Practica7-behavior/include/behavior_trees/: go.h  turn.h
Practica7-behavior/src/: btreetest.cpp
Practica7-behavior/src/behavior_trees/: go.cpp  turn.cpp
Practica7-behavior/trees/: bumpgo_tree.xml  tree1.xml
Practica8-dialogflow/: CMakeLists.txt  notas.txt  package.xml  root-cargo-272211-f39c5e1da614.json
Practica8-dialogflow/include/: ejemploDF.h
Practica8-dialogflow/include/behavior_trees/: cogebolsa.h  eligebolsa.h  saluda.h  siguepersona.h  vuelve.h
Practica8-dialogflow/launch/: carryluggage.launch  dependencies.launch
Practica8-dialogflow/src/: busquedap8.cpp  carryluggage.cpp  ejemploDF.cpp  exampleDF.cpp  navp8.cpp  pruebadf.cpp
Practica8-dialogflow/src/behavior_trees/: cogebolsa.cpp  eligebolsa.cpp  saluda.cpp  siguepersona.cpp  vuelve.cpp
Practica8-dialogflow/srv/: busqueda.srv
Practica8-dialogflow/trees/: carryluggage.xml
Practica8-dialogflow/worlds/: casafindmymates
camara_portatil/: CMakeLists.txt  notas.txt  package.xml
camara_portatil/launch/: daniel_camera.launch
launch/: stop-bumper.launch
practica9-findmymates/: CMakeLists.txt  notas.txt  package.xml
practica9-findmymates/include/: constants.h  ejemploDF.h
practica9-findmymates/include/behavior_trees/: busca.h  dialogo.h  informacion.h  navegacion.h  saludo.h  vuelve.h
practica9-findmymates/launch/: dependencies.launch  findmymates.launch
practica9-findmymates/src/: ejemploDF.cpp  findmymates.cpp  navp8.cpp
practica9-findmymates/src/behavior_trees/: busca.cpp  dialogo.cpp  informacion.cpp  navegacion.cpp  saludo.cpp  vuelve.cpp
practica9-findmymates/trees/: findmymates.xml
practica9-findmymates/worlds/: findmates.world
servicios/: CMakeLists.txt  package.xml
servicios/srv/: busqueda.srv
src/: nodoPrueba.cpp  nodo_pub.cpp  stop-bumper-node.cpp
