<?xml version="1.0"?>
<package format="2">
  <name>practica6-botella</name>
  <version>0.0.0</version>
  <description>description</description>
    <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>roslint</build_depend>


  <exec_depend>roscpp</exec_depend>

  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>

  </export>

</package>
