<?xml version="1.0"?>
<package format="2">
  <name>practica8-dialogflow</name>
  <version>0.0.0</version>
  <description>description</description>
    <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>kobuki_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>gb_dialog</build_depend>
  <build_depend>dialogflow_ros_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>behaviortree_cpp_v3</build_depend>


  <build_depend>roslint</build_depend>


  <exec_depend>roscpp</exec_depend>

  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>gb_dialog</exec_depend>
  <exec_depend>dialogflow_ros_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>behaviortree_cpp_v3</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>

</package>
